# DocChat-AI

./: .gitignore  LICENSE  README.md  extractor.py  llm_client.py  main.py  pyproject.toml  requirements.txt
static/: index.html  script.js  style.css
