[project]
name = "ollama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "numpy>=2.4.2",
    "pypdf>=6.6.2",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "response>=0.5.0",
    "uvicorn>=0.40.0",
]
